// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`anchor-template generator should be able to generate two templates side by side 1`] = `
{
  "Anchor.toml": {
    "content": [
      "[features]",
      "seeds = false",
      "skip-lint = false",
      "[programs.localnet]",
      "counter_two = "EuJfgknXicf6iZASeagt5U6XDDPpLTQrvWPW31vgAwo8"",
      "[registry]",
      "url = "https://api.apr.dev"",
      "[provider]",
      "cluster = "Localnet"",
      "wallet = "~/.config/solana/id.json"",
      "[scripts]",
      "test = "../node_modules/.bin/nx run test:jest"",
      "[test.validator]",
      "bind_address = "127.0.0.1"",
    ],
    "isBinary": false,
    "path": "target/Anchor.toml",
  },
  "programs": {
    "children": {
      "counter-one": {
        "children": {
          "Cargo.toml": {
            "content": [
              "[package]",
              "name = "counter-one"",
              "version = "0.1.0"",
              "description = "Created with Anchor"",
              "edition = "2021"",
              "[lib]",
              "crate-type = ["cdylib", "lib"]",
              "name = "counter_one"",
              "[features]",
              "no-entrypoint = []",
              "no-idl = []",
              "no-log-ix-name = []",
              "cpi = ["no-entrypoint"]",
              "default = []",
              "[dependencies]",
              "anchor-lang = "0.28.0"",
            ],
            "isBinary": false,
            "path": "target/programs/counter-one/Cargo.toml",
          },
          "Xargo.toml": {
            "content": [
              "[target.bpfel-unknown-unknown.dependencies.std]",
              "features = []",
            ],
            "isBinary": false,
            "path": "target/programs/counter-one/Xargo.toml",
          },
          "src": {
            "children": {
              "lib.rs": {
                "content": [
                  "#![allow(clippy::result_large_err)]",
                  "use anchor_lang::prelude::*;",
                  "declare_id!("CounNZdmsQmWh7uVngV9FXW2dZ6zAgbJyYsvBpqbykg");",
                  "#[program]",
                  "pub mod counter_one {",
                  "use super::*;",
                  "pub fn close_counter_one(_ctx: Context<CloseCounterOne>) -> Result<()> {",
                  "Ok(())",
                  "}",
                  "pub fn decrement(ctx: Context<Update>) -> Result<()> {",
                  "ctx.accounts.counter_one.count = ctx.accounts.counter_one.count.checked_sub(1).unwrap();",
                  "Ok(())",
                  "}",
                  "pub fn increment(ctx: Context<Update>) -> Result<()> {",
                  "ctx.accounts.counter_one.count = ctx.accounts.counter_one.count.checked_add(1).unwrap();",
                  "Ok(())",
                  "}",
                  "pub fn initialize_counter_one(_ctx: Context<InitializeCounterOne>) -> Result<()> {",
                  "Ok(())",
                  "}",
                  "pub fn set(ctx: Context<Update>, value: u8) -> Result<()> {",
                  "ctx.accounts.counter_one.count = value.clone();",
                  "Ok(())",
                  "}",
                  "}",
                  "#[derive(Accounts)]",
                  "pub struct InitializeCounterOne<'info> {",
                  "#[account(mut)]",
                  "pub payer: Signer<'info>,",
                  "#[account(",
                  "init,",
                  "space = 8 + CounterOne::INIT_SPACE,",
                  "payer = payer",
                  ")]",
                  "pub counter_one: Account<'info, CounterOne>,",
                  "pub system_program: Program<'info, System>,",
                  "}",
                  "#[derive(Accounts)]",
                  "pub struct CloseCounterOne<'info> {",
                  "#[account(mut)]",
                  "pub payer: Signer<'info>,",
                  "#[account(",
                  "mut,",
                  "close = payer, // close account and return lamports to payer",
                  ")]",
                  "pub counter_one: Account<'info, CounterOne>,",
                  "}",
                  "#[derive(Accounts)]",
                  "pub struct Update<'info> {",
                  "#[account(mut)]",
                  "pub counter_one: Account<'info, CounterOne>,",
                  "}",
                  "#[account]",
                  "#[derive(InitSpace)]",
                  "pub struct CounterOne {",
                  "count: u8,",
                  "}",
                ],
                "isBinary": false,
                "path": "target/programs/counter-one/src/lib.rs",
              },
            },
            "path": "target/programs/counter-one/src",
          },
        },
        "path": "target/programs/counter-one",
      },
      "counter-two": {
        "children": {
          "Cargo.toml": {
            "content": [
              "[package]",
              "name = "counter-two"",
              "version = "0.1.0"",
              "description = "Created with Anchor"",
              "edition = "2021"",
              "[lib]",
              "crate-type = ["cdylib", "lib"]",
              "name = "counter_two"",
              "[features]",
              "no-entrypoint = []",
              "no-idl = []",
              "no-log-ix-name = []",
              "cpi = ["no-entrypoint"]",
              "default = []",
              "[dependencies]",
              "anchor-lang = "0.28.0"",
            ],
            "isBinary": false,
            "path": "target/programs/counter-two/Cargo.toml",
          },
          "Xargo.toml": {
            "content": [
              "[target.bpfel-unknown-unknown.dependencies.std]",
              "features = []",
            ],
            "isBinary": false,
            "path": "target/programs/counter-two/Xargo.toml",
          },
          "src": {
            "children": {
              "lib.rs": {
                "content": [
                  "#![allow(clippy::result_large_err)]",
                  "use anchor_lang::prelude::*;",
                  "declare_id!("CounNZdmsQmWh7uVngV9FXW2dZ6zAgbJyYsvBpqbykg");",
                  "#[program]",
                  "pub mod counter_two {",
                  "use super::*;",
                  "pub fn close_counter_two(_ctx: Context<CloseCounterTwo>) -> Result<()> {",
                  "Ok(())",
                  "}",
                  "pub fn decrement(ctx: Context<Update>) -> Result<()> {",
                  "ctx.accounts.counter_two.count = ctx.accounts.counter_two.count.checked_sub(1).unwrap();",
                  "Ok(())",
                  "}",
                  "pub fn increment(ctx: Context<Update>) -> Result<()> {",
                  "ctx.accounts.counter_two.count = ctx.accounts.counter_two.count.checked_add(1).unwrap();",
                  "Ok(())",
                  "}",
                  "pub fn initialize_counter_two(_ctx: Context<InitializeCounterTwo>) -> Result<()> {",
                  "Ok(())",
                  "}",
                  "pub fn set(ctx: Context<Update>, value: u8) -> Result<()> {",
                  "ctx.accounts.counter_two.count = value.clone();",
                  "Ok(())",
                  "}",
                  "}",
                  "#[derive(Accounts)]",
                  "pub struct InitializeCounterTwo<'info> {",
                  "#[account(mut)]",
                  "pub payer: Signer<'info>,",
                  "#[account(",
                  "init,",
                  "space = 8 + CounterTwo::INIT_SPACE,",
                  "payer = payer",
                  ")]",
                  "pub counter_two: Account<'info, CounterTwo>,",
                  "pub system_program: Program<'info, System>,",
                  "}",
                  "#[derive(Accounts)]",
                  "pub struct CloseCounterTwo<'info> {",
                  "#[account(mut)]",
                  "pub payer: Signer<'info>,",
                  "#[account(",
                  "mut,",
                  "close = payer, // close account and return lamports to payer",
                  ")]",
                  "pub counter_two: Account<'info, CounterTwo>,",
                  "}",
                  "#[derive(Accounts)]",
                  "pub struct Update<'info> {",
                  "#[account(mut)]",
                  "pub counter_two: Account<'info, CounterTwo>,",
                  "}",
                  "#[account]",
                  "#[derive(InitSpace)]",
                  "pub struct CounterTwo {",
                  "count: u8,",
                  "}",
                ],
                "isBinary": false,
                "path": "target/programs/counter-two/src/lib.rs",
              },
            },
            "path": "target/programs/counter-two/src",
          },
        },
        "path": "target/programs/counter-two",
      },
    },
    "path": "target/programs",
  },
  "src": {
    "children": {
      "counter-one-exports.ts": {
        "content": [
          "import { Program } from '@coral-xyz/anchor';",
          "import { Cluster, PublicKey } from '@solana/web3.js';",
          "import { IDL as CounterOneIDL } from '../target/types/counter_one';",
          "import type { CounterOne } from '../target/types/counter_one';",
          "export { CounterOne, CounterOneIDL };",
          "export type CounterOneProgram = Program<CounterOne>;",
          "export const COUNTER_PROGRAM_ID = new PublicKey('CounNZdmsQmWh7uVngV9FXW2dZ6zAgbJyYsvBpqbykg')",
          "export function getCounterProgramId(cluster: Cluster) {",
          "switch (cluster) {",
          "case 'devnet':",
          "case 'testnet':",
          "case 'mainnet-beta':",
          "return new PublicKey('CounNZdmsQmWh7uVngV9FXW2dZ6zAgbJyYsvBpqbykg')",
          "default:",
          "return COUNTER_PROGRAM_ID",
          "}",
          "}",
        ],
        "isBinary": false,
        "path": "target/src/counter-one-exports.ts",
      },
      "counter-two-exports.ts": {
        "content": [
          "import { Program } from '@coral-xyz/anchor';",
          "import { Cluster, PublicKey } from '@solana/web3.js';",
          "import { IDL as CounterTwoIDL } from '../target/types/counter_two';",
          "import type { CounterTwo } from '../target/types/counter_two';",
          "export { CounterTwo, CounterTwoIDL };",
          "export type CounterTwoProgram = Program<CounterTwo>;",
          "export const COUNTER_PROGRAM_ID = new PublicKey('CounNZdmsQmWh7uVngV9FXW2dZ6zAgbJyYsvBpqbykg')",
          "export function getCounterProgramId(cluster: Cluster) {",
          "switch (cluster) {",
          "case 'devnet':",
          "case 'testnet':",
          "case 'mainnet-beta':",
          "return new PublicKey('CounNZdmsQmWh7uVngV9FXW2dZ6zAgbJyYsvBpqbykg')",
          "default:",
          "return COUNTER_PROGRAM_ID",
          "}",
          "}",
        ],
        "isBinary": false,
        "path": "target/src/counter-two-exports.ts",
      },
      "index.ts": {
        "content": [
          "export * from './counter-one-exports'",
          "export * from './counter-two-exports'",
        ],
        "isBinary": false,
        "path": "target/src/index.ts",
      },
    },
    "path": "target/src",
  },
  "target": {
    "children": {
      "idl": {
        "children": {
          "counter_one.json": {
            "content": [
              "{",
              ""version": "0.1.0",",
              ""name": "counter_one",",
              ""instructions": [",
              "{",
              ""name": "closeCounterOne",",
              ""accounts": [",
              "{",
              ""name": "payer",",
              ""isMut": true,",
              ""isSigner": true",
              "},",
              "{",
              ""name": "counter_one",",
              ""isMut": true,",
              ""isSigner": false",
              "}",
              "],",
              ""args": []",
              "},",
              "{",
              ""name": "decrement",",
              ""accounts": [",
              "{",
              ""name": "counter_one",",
              ""isMut": true,",
              ""isSigner": false",
              "}",
              "],",
              ""args": []",
              "},",
              "{",
              ""name": "increment",",
              ""accounts": [",
              "{",
              ""name": "counterOne",",
              ""isMut": true,",
              ""isSigner": false",
              "}",
              "],",
              ""args": []",
              "},",
              "{",
              ""name": "initializeCounterOne",",
              ""accounts": [",
              "{",
              ""name": "payer",",
              ""isMut": true,",
              ""isSigner": true",
              "},",
              "{",
              ""name": "counterOne",",
              ""isMut": true,",
              ""isSigner": true",
              "},",
              "{",
              ""name": "systemProgram",",
              ""isMut": false,",
              ""isSigner": false",
              "}",
              "],",
              ""args": []",
              "},",
              "{",
              ""name": "set",",
              ""accounts": [",
              "{",
              ""name": "counterOne",",
              ""isMut": true,",
              ""isSigner": false",
              "}",
              "],",
              ""args": [",
              "{",
              ""name": "value",",
              ""type": "u8"",
              "}",
              "]",
              "}",
              "],",
              ""accounts": [",
              "{",
              ""name": "CounterOne",",
              ""type": {",
              ""kind": "struct",",
              ""fields": [",
              "{",
              ""name": "count",",
              ""type": "u8"",
              "}",
              "]",
              "}",
              "}",
              "],",
              ""metadata": {",
              ""address": "CounNZdmsQmWh7uVngV9FXW2dZ6zAgbJyYsvBpqbykg"",
              "}",
              "}",
            ],
            "isBinary": false,
            "path": "target/target/idl/counter_one.json",
          },
          "counter_two.json": {
            "content": [
              "{",
              ""version": "0.1.0",",
              ""name": "counter_two",",
              ""instructions": [",
              "{",
              ""name": "closeCounterTwo",",
              ""accounts": [",
              "{",
              ""name": "payer",",
              ""isMut": true,",
              ""isSigner": true",
              "},",
              "{",
              ""name": "counter_two",",
              ""isMut": true,",
              ""isSigner": false",
              "}",
              "],",
              ""args": []",
              "},",
              "{",
              ""name": "decrement",",
              ""accounts": [",
              "{",
              ""name": "counter_two",",
              ""isMut": true,",
              ""isSigner": false",
              "}",
              "],",
              ""args": []",
              "},",
              "{",
              ""name": "increment",",
              ""accounts": [",
              "{",
              ""name": "counterTwo",",
              ""isMut": true,",
              ""isSigner": false",
              "}",
              "],",
              ""args": []",
              "},",
              "{",
              ""name": "initializeCounterTwo",",
              ""accounts": [",
              "{",
              ""name": "payer",",
              ""isMut": true,",
              ""isSigner": true",
              "},",
              "{",
              ""name": "counterTwo",",
              ""isMut": true,",
              ""isSigner": true",
              "},",
              "{",
              ""name": "systemProgram",",
              ""isMut": false,",
              ""isSigner": false",
              "}",
              "],",
              ""args": []",
              "},",
              "{",
              ""name": "set",",
              ""accounts": [",
              "{",
              ""name": "counterTwo",",
              ""isMut": true,",
              ""isSigner": false",
              "}",
              "],",
              ""args": [",
              "{",
              ""name": "value",",
              ""type": "u8"",
              "}",
              "]",
              "}",
              "],",
              ""accounts": [",
              "{",
              ""name": "CounterTwo",",
              ""type": {",
              ""kind": "struct",",
              ""fields": [",
              "{",
              ""name": "count",",
              ""type": "u8"",
              "}",
              "]",
              "}",
              "}",
              "],",
              ""metadata": {",
              ""address": "CounNZdmsQmWh7uVngV9FXW2dZ6zAgbJyYsvBpqbykg"",
              "}",
              "}",
            ],
            "isBinary": false,
            "path": "target/target/idl/counter_two.json",
          },
        },
        "path": "target/target/idl",
      },
      "types": {
        "children": {
          "counter-one.ts": {
            "content": [
              "export type CounterOne = {",
              ""version": "0.1.0",",
              ""name": "counter_one",",
              ""instructions": [",
              "{",
              ""name": "closeCounterOne",",
              ""accounts": [",
              "{",
              ""name": "payer",",
              ""isMut": true,",
              ""isSigner": true",
              "},",
              "{",
              ""name": "counterOne",",
              ""isMut": true,",
              ""isSigner": false",
              "}",
              "],",
              ""args": []",
              "},",
              "{",
              ""name": "decrement",",
              ""accounts": [",
              "{",
              ""name": "counterOne",",
              ""isMut": true,",
              ""isSigner": false",
              "}",
              "],",
              ""args": []",
              "},",
              "{",
              ""name": "increment",",
              ""accounts": [",
              "{",
              ""name": "counterOne",",
              ""isMut": true,",
              ""isSigner": false",
              "}",
              "],",
              ""args": []",
              "},",
              "{",
              ""name": "initializeCounterOne",",
              ""accounts": [",
              "{",
              ""name": "payer",",
              ""isMut": true,",
              ""isSigner": true",
              "},",
              "{",
              ""name": "counterOne",",
              ""isMut": true,",
              ""isSigner": true",
              "},",
              "{",
              ""name": "systemProgram",",
              ""isMut": false,",
              ""isSigner": false",
              "}",
              "],",
              ""args": []",
              "},",
              "{",
              ""name": "set",",
              ""accounts": [",
              "{",
              ""name": "counterOne",",
              ""isMut": true,",
              ""isSigner": false",
              "}",
              "],",
              ""args": [",
              "{",
              ""name": "value",",
              ""type": "u8"",
              "}",
              "]",
              "}",
              "],",
              ""accounts": [",
              "{",
              ""name": "counterOne",",
              ""type": {",
              ""kind": "struct",",
              ""fields": [",
              "{",
              ""name": "count",",
              ""type": "u8"",
              "}",
              "]",
              "}",
              "}",
              "]",
              "};",
              "export const IDL: CounterOne = {",
              ""version": "0.1.0",",
              ""name": "counter_one",",
              ""instructions": [",
              "{",
              ""name": "closeCounterOne",",
              ""accounts": [",
              "{",
              ""name": "payer",",
              ""isMut": true,",
              ""isSigner": true",
              "},",
              "{",
              ""name": "counterOne",",
              ""isMut": true,",
              ""isSigner": false",
              "}",
              "],",
              ""args": []",
              "},",
              "{",
              ""name": "decrement",",
              ""accounts": [",
              "{",
              ""name": "counterOne",",
              ""isMut": true,",
              ""isSigner": false",
              "}",
              "],",
              ""args": []",
              "},",
              "{",
              ""name": "increment",",
              ""accounts": [",
              "{",
              ""name": "counterOne",",
              ""isMut": true,",
              ""isSigner": false",
              "}",
              "],",
              ""args": []",
              "},",
              "{",
              ""name": "initializeCounterOne",",
              ""accounts": [",
              "{",
              ""name": "payer",",
              ""isMut": true,",
              ""isSigner": true",
              "},",
              "{",
              ""name": "counterOne",",
              ""isMut": true,",
              ""isSigner": true",
              "},",
              "{",
              ""name": "systemProgram",",
              ""isMut": false,",
              ""isSigner": false",
              "}",
              "],",
              ""args": []",
              "},",
              "{",
              ""name": "set",",
              ""accounts": [",
              "{",
              ""name": "counterOne",",
              ""isMut": true,",
              ""isSigner": false",
              "}",
              "],",
              ""args": [",
              "{",
              ""name": "value",",
              ""type": "u8"",
              "}",
              "]",
              "}",
              "],",
              ""accounts": [",
              "{",
              ""name": "counterOne",",
              ""type": {",
              ""kind": "struct",",
              ""fields": [",
              "{",
              ""name": "count",",
              ""type": "u8"",
              "}",
              "]",
              "}",
              "}",
              "]",
              "};",
            ],
            "isBinary": false,
            "path": "target/target/types/counter-one.ts",
          },
          "counter-two.ts": {
            "content": [
              "export type CounterTwo = {",
              ""version": "0.1.0",",
              ""name": "counter_two",",
              ""instructions": [",
              "{",
              ""name": "closeCounterTwo",",
              ""accounts": [",
              "{",
              ""name": "payer",",
              ""isMut": true,",
              ""isSigner": true",
              "},",
              "{",
              ""name": "counterTwo",",
              ""isMut": true,",
              ""isSigner": false",
              "}",
              "],",
              ""args": []",
              "},",
              "{",
              ""name": "decrement",",
              ""accounts": [",
              "{",
              ""name": "counterTwo",",
              ""isMut": true,",
              ""isSigner": false",
              "}",
              "],",
              ""args": []",
              "},",
              "{",
              ""name": "increment",",
              ""accounts": [",
              "{",
              ""name": "counterTwo",",
              ""isMut": true,",
              ""isSigner": false",
              "}",
              "],",
              ""args": []",
              "},",
              "{",
              ""name": "initializeCounterTwo",",
              ""accounts": [",
              "{",
              ""name": "payer",",
              ""isMut": true,",
              ""isSigner": true",
              "},",
              "{",
              ""name": "counterTwo",",
              ""isMut": true,",
              ""isSigner": true",
              "},",
              "{",
              ""name": "systemProgram",",
              ""isMut": false,",
              ""isSigner": false",
              "}",
              "],",
              ""args": []",
              "},",
              "{",
              ""name": "set",",
              ""accounts": [",
              "{",
              ""name": "counterTwo",",
              ""isMut": true,",
              ""isSigner": false",
              "}",
              "],",
              ""args": [",
              "{",
              ""name": "value",",
              ""type": "u8"",
              "}",
              "]",
              "}",
              "],",
              ""accounts": [",
              "{",
              ""name": "counterTwo",",
              ""type": {",
              ""kind": "struct",",
              ""fields": [",
              "{",
              ""name": "count",",
              ""type": "u8"",
              "}",
              "]",
              "}",
              "}",
              "]",
              "};",
              "export const IDL: CounterTwo = {",
              ""version": "0.1.0",",
              ""name": "counter_two",",
              ""instructions": [",
              "{",
              ""name": "closeCounterTwo",",
              ""accounts": [",
              "{",
              ""name": "payer",",
              ""isMut": true,",
              ""isSigner": true",
              "},",
              "{",
              ""name": "counterTwo",",
              ""isMut": true,",
              ""isSigner": false",
              "}",
              "],",
              ""args": []",
              "},",
              "{",
              ""name": "decrement",",
              ""accounts": [",
              "{",
              ""name": "counterTwo",",
              ""isMut": true,",
              ""isSigner": false",
              "}",
              "],",
              ""args": []",
              "},",
              "{",
              ""name": "increment",",
              ""accounts": [",
              "{",
              ""name": "counterTwo",",
              ""isMut": true,",
              ""isSigner": false",
              "}",
              "],",
              ""args": []",
              "},",
              "{",
              ""name": "initializeCounterTwo",",
              ""accounts": [",
              "{",
              ""name": "payer",",
              ""isMut": true,",
              ""isSigner": true",
              "},",
              "{",
              ""name": "counterTwo",",
              ""isMut": true,",
              ""isSigner": true",
              "},",
              "{",
              ""name": "systemProgram",",
              ""isMut": false,",
              ""isSigner": false",
              "}",
              "],",
              ""args": []",
              "},",
              "{",
              ""name": "set",",
              ""accounts": [",
              "{",
              ""name": "counterTwo",",
              ""isMut": true,",
              ""isSigner": false",
              "}",
              "],",
              ""args": [",
              "{",
              ""name": "value",",
              ""type": "u8"",
              "}",
              "]",
              "}",
              "],",
              ""accounts": [",
              "{",
              ""name": "counterTwo",",
              ""type": {",
              ""kind": "struct",",
              ""fields": [",
              "{",
              ""name": "count",",
              ""type": "u8"",
              "}",
              "]",
              "}",
              "}",
              "]",
              "};",
            ],
            "isBinary": false,
            "path": "target/target/types/counter-two.ts",
          },
        },
        "path": "target/target/types",
      },
    },
    "path": "target/target",
  },
  "tests": {
    "children": {
      "counter-one.spec.ts": {
        "content": [
          "import * as anchor from '@coral-xyz/anchor'",
          "import { Program } from '@coral-xyz/anchor'",
          "import { Keypair } from '@solana/web3.js'",
          "import { CounterOne } from '../target/types/counter-one'",
          "describe("counter-one", () => {",
          "// Configure the client to use the local cluster.",
          "const provider = anchor.AnchorProvider.env()",
          "anchor.setProvider(provider)",
          "const payer = provider.wallet as anchor.Wallet",
          "const program = anchor.workspace.CounterOne as Program<CounterOne>;",
          "const counterOneKeypair = Keypair.generate()",
          "it('Initialize CounterOne', async () => {",
          "await program.methods",
          ".initializeCounterOne()",
          ".accounts({",
          "counterOne: counterOneKeypair.publicKey,",
          "payer: payer.publicKey,",
          "})",
          ".signers([counterOneKeypair])",
          ".rpc()",
          "const currentCount = await program.account.counterOne.fetch(counterOneKeypair.publicKey)",
          "expect(currentCount.count).toEqual(0)",
          "})",
          "it('Increment CounterOne', async () => {",
          "await program.methods.increment().accounts({ counterOne: counterOneKeypair.publicKey }).rpc()",
          "const currentCount = await program.account.counterOne.fetch(counterOneKeypair.publicKey)",
          "expect(currentCount.count).toEqual(1)",
          "})",
          "it('Increment CounterOne Again', async () => {",
          "await program.methods.increment().accounts({ counterOne: counterOneKeypair.publicKey }).rpc()",
          "const currentCount = await program.account.counterOne.fetch(counterOneKeypair.publicKey)",
          "expect(currentCount.count).toEqual(2)",
          "})",
          "it('Decrement CounterOne', async () => {",
          "await program.methods.decrement().accounts({ counterOne: counterOneKeypair.publicKey }).rpc()",
          "const currentCount = await program.account.counterOne.fetch(counterOneKeypair.publicKey)",
          "expect(currentCount.count).toEqual(1)",
          "})",
          "it('Set counterOne value', async () => {",
          "await program.methods.set(42).accounts({ counterOne: counterOneKeypair.publicKey }).rpc()",
          "const currentCount = await program.account.counterOne.fetch(counterOneKeypair.publicKey)",
          "expect(currentCount.count).toEqual(42)",
          "})",
          "it('Set close the counterOne account', async () => {",
          "await program.methods",
          ".closeCounterOne()",
          ".accounts({",
          "payer: payer.publicKey,",
          "counterOne: counterOneKeypair.publicKey,",
          "})",
          ".rpc()",
          "// The account should no longer exist, returning null.",
          "const userAccount = await program.account.counterOne.fetchNullable(counterOneKeypair.publicKey)",
          "expect(userAccount).toBeNull()",
          "})",
          "})",
        ],
        "isBinary": false,
        "path": "target/tests/counter-one.spec.ts",
      },
      "counter-two.spec.ts": {
        "content": [
          "import * as anchor from '@coral-xyz/anchor'",
          "import { Program } from '@coral-xyz/anchor'",
          "import { Keypair } from '@solana/web3.js'",
          "import { CounterTwo } from '../target/types/counter-two'",
          "describe("counter-two", () => {",
          "// Configure the client to use the local cluster.",
          "const provider = anchor.AnchorProvider.env()",
          "anchor.setProvider(provider)",
          "const payer = provider.wallet as anchor.Wallet",
          "const program = anchor.workspace.CounterTwo as Program<CounterTwo>;",
          "const counterTwoKeypair = Keypair.generate()",
          "it('Initialize CounterTwo', async () => {",
          "await program.methods",
          ".initializeCounterTwo()",
          ".accounts({",
          "counterTwo: counterTwoKeypair.publicKey,",
          "payer: payer.publicKey,",
          "})",
          ".signers([counterTwoKeypair])",
          ".rpc()",
          "const currentCount = await program.account.counterTwo.fetch(counterTwoKeypair.publicKey)",
          "expect(currentCount.count).toEqual(0)",
          "})",
          "it('Increment CounterTwo', async () => {",
          "await program.methods.increment().accounts({ counterTwo: counterTwoKeypair.publicKey }).rpc()",
          "const currentCount = await program.account.counterTwo.fetch(counterTwoKeypair.publicKey)",
          "expect(currentCount.count).toEqual(1)",
          "})",
          "it('Increment CounterTwo Again', async () => {",
          "await program.methods.increment().accounts({ counterTwo: counterTwoKeypair.publicKey }).rpc()",
          "const currentCount = await program.account.counterTwo.fetch(counterTwoKeypair.publicKey)",
          "expect(currentCount.count).toEqual(2)",
          "})",
          "it('Decrement CounterTwo', async () => {",
          "await program.methods.decrement().accounts({ counterTwo: counterTwoKeypair.publicKey }).rpc()",
          "const currentCount = await program.account.counterTwo.fetch(counterTwoKeypair.publicKey)",
          "expect(currentCount.count).toEqual(1)",
          "})",
          "it('Set counterTwo value', async () => {",
          "await program.methods.set(42).accounts({ counterTwo: counterTwoKeypair.publicKey }).rpc()",
          "const currentCount = await program.account.counterTwo.fetch(counterTwoKeypair.publicKey)",
          "expect(currentCount.count).toEqual(42)",
          "})",
          "it('Set close the counterTwo account', async () => {",
          "await program.methods",
          ".closeCounterTwo()",
          ".accounts({",
          "payer: payer.publicKey,",
          "counterTwo: counterTwoKeypair.publicKey,",
          "})",
          ".rpc()",
          "// The account should no longer exist, returning null.",
          "const userAccount = await program.account.counterTwo.fetchNullable(counterTwoKeypair.publicKey)",
          "expect(userAccount).toBeNull()",
          "})",
          "})",
        ],
        "isBinary": false,
        "path": "target/tests/counter-two.spec.ts",
      },
    },
    "path": "target/tests",
  },
}
`;

exports[`anchor-template generator should generate files for base template 1`] = `
{
  "Anchor.toml": {
    "content": [
      "[features]",
      "seeds = false",
      "skip-lint = false",
      "[programs.localnet]",
      "base = "EuJfgknXicf6iZASeagt5U6XDDPpLTQrvWPW31vgAwo8"",
      "[registry]",
      "url = "https://api.apr.dev"",
      "[provider]",
      "cluster = "Localnet"",
      "wallet = "~/.config/solana/id.json"",
      "[scripts]",
      "test = "../node_modules/.bin/nx run test:jest"",
      "[test.validator]",
      "bind_address = "127.0.0.1"",
    ],
    "isBinary": false,
    "path": "target/Anchor.toml",
  },
  "Cargo.lock": {
    "content": null,
    "isBinary": true,
    "path": "target/Cargo.lock",
  },
  "Cargo.toml": {
    "content": [
      "[workspace]",
      "members = [",
      ""programs/*"",
      "]",
      "resolver = "2"",
      "[profile.release]",
      "overflow-checks = true",
      "lto = "fat"",
      "codegen-units = 1",
      "[profile.release.build-override]",
      "opt-level = 3",
      "incremental = false",
      "codegen-units = 1",
    ],
    "isBinary": false,
    "path": "target/Cargo.toml",
  },
  "migrations": {
    "children": {
      "deploy.ts": {
        "content": [
          "// Migrations are an early feature. Currently, they're nothing more than this",
          "// single deploy script that's invoked from the CLI, injecting a provider",
          "// configured from the workspace's Anchor.toml.",
          "import * as anchor from '@coral-xyz/anchor';",
          "module.exports = async function (provider) {",
          "// Configure client to use the provider.",
          "anchor.setProvider(provider);",
          "// Add your deploy script here.",
          "};",
        ],
        "isBinary": false,
        "path": "target/migrations/deploy.ts",
      },
    },
    "path": "target/migrations",
  },
  "src": {
    "children": {
      "index.ts": {
        "content": [
          "export * from './base-exports'",
        ],
        "isBinary": false,
        "path": "target/src/index.ts",
      },
    },
    "path": "target/src",
  },
}
`;

exports[`anchor-template generator should generate files for counter template 1`] = `
{
  "Anchor.toml": {
    "content": [
      "[features]",
      "seeds = false",
      "skip-lint = false",
      "[programs.localnet]",
      "counter = "EuJfgknXicf6iZASeagt5U6XDDPpLTQrvWPW31vgAwo8"",
      "[registry]",
      "url = "https://api.apr.dev"",
      "[provider]",
      "cluster = "Localnet"",
      "wallet = "~/.config/solana/id.json"",
      "[scripts]",
      "test = "../node_modules/.bin/nx run test:jest"",
      "[test.validator]",
      "bind_address = "127.0.0.1"",
    ],
    "isBinary": false,
    "path": "target/Anchor.toml",
  },
  "programs": {
    "children": {
      "counter": {
        "children": {
          "Cargo.toml": {
            "content": [
              "[package]",
              "name = "counter"",
              "version = "0.1.0"",
              "description = "Created with Anchor"",
              "edition = "2021"",
              "[lib]",
              "crate-type = ["cdylib", "lib"]",
              "name = "counter"",
              "[features]",
              "no-entrypoint = []",
              "no-idl = []",
              "no-log-ix-name = []",
              "cpi = ["no-entrypoint"]",
              "default = []",
              "[dependencies]",
              "anchor-lang = "0.28.0"",
            ],
            "isBinary": false,
            "path": "target/programs/counter/Cargo.toml",
          },
          "Xargo.toml": {
            "content": [
              "[target.bpfel-unknown-unknown.dependencies.std]",
              "features = []",
            ],
            "isBinary": false,
            "path": "target/programs/counter/Xargo.toml",
          },
          "src": {
            "children": {
              "lib.rs": {
                "content": [
                  "#![allow(clippy::result_large_err)]",
                  "use anchor_lang::prelude::*;",
                  "declare_id!("CounNZdmsQmWh7uVngV9FXW2dZ6zAgbJyYsvBpqbykg");",
                  "#[program]",
                  "pub mod counter {",
                  "use super::*;",
                  "pub fn close_counter(_ctx: Context<CloseCounter>) -> Result<()> {",
                  "Ok(())",
                  "}",
                  "pub fn decrement(ctx: Context<Update>) -> Result<()> {",
                  "ctx.accounts.counter.count = ctx.accounts.counter.count.checked_sub(1).unwrap();",
                  "Ok(())",
                  "}",
                  "pub fn increment(ctx: Context<Update>) -> Result<()> {",
                  "ctx.accounts.counter.count = ctx.accounts.counter.count.checked_add(1).unwrap();",
                  "Ok(())",
                  "}",
                  "pub fn initialize_counter(_ctx: Context<InitializeCounter>) -> Result<()> {",
                  "Ok(())",
                  "}",
                  "pub fn set(ctx: Context<Update>, value: u8) -> Result<()> {",
                  "ctx.accounts.counter.count = value.clone();",
                  "Ok(())",
                  "}",
                  "}",
                  "#[derive(Accounts)]",
                  "pub struct InitializeCounter<'info> {",
                  "#[account(mut)]",
                  "pub payer: Signer<'info>,",
                  "#[account(",
                  "init,",
                  "space = 8 + Counter::INIT_SPACE,",
                  "payer = payer",
                  ")]",
                  "pub counter: Account<'info, Counter>,",
                  "pub system_program: Program<'info, System>,",
                  "}",
                  "#[derive(Accounts)]",
                  "pub struct CloseCounter<'info> {",
                  "#[account(mut)]",
                  "pub payer: Signer<'info>,",
                  "#[account(",
                  "mut,",
                  "close = payer, // close account and return lamports to payer",
                  ")]",
                  "pub counter: Account<'info, Counter>,",
                  "}",
                  "#[derive(Accounts)]",
                  "pub struct Update<'info> {",
                  "#[account(mut)]",
                  "pub counter: Account<'info, Counter>,",
                  "}",
                  "#[account]",
                  "#[derive(InitSpace)]",
                  "pub struct Counter {",
                  "count: u8,",
                  "}",
                ],
                "isBinary": false,
                "path": "target/programs/counter/src/lib.rs",
              },
            },
            "path": "target/programs/counter/src",
          },
        },
        "path": "target/programs/counter",
      },
    },
    "path": "target/programs",
  },
  "src": {
    "children": {
      "counter-exports.ts": {
        "content": [
          "import { Program } from '@coral-xyz/anchor';",
          "import { Cluster, PublicKey } from '@solana/web3.js';",
          "import { IDL as CounterIDL } from '../target/types/counter';",
          "import type { Counter } from '../target/types/counter';",
          "export { Counter, CounterIDL };",
          "export type CounterProgram = Program<Counter>;",
          "export const COUNTER_PROGRAM_ID = new PublicKey('CounNZdmsQmWh7uVngV9FXW2dZ6zAgbJyYsvBpqbykg')",
          "export function getCounterProgramId(cluster: Cluster) {",
          "switch (cluster) {",
          "case 'devnet':",
          "case 'testnet':",
          "case 'mainnet-beta':",
          "return new PublicKey('CounNZdmsQmWh7uVngV9FXW2dZ6zAgbJyYsvBpqbykg')",
          "default:",
          "return COUNTER_PROGRAM_ID",
          "}",
          "}",
        ],
        "isBinary": false,
        "path": "target/src/counter-exports.ts",
      },
      "index.ts": {
        "content": [
          "export * from './counter-exports'",
        ],
        "isBinary": false,
        "path": "target/src/index.ts",
      },
    },
    "path": "target/src",
  },
  "target": {
    "children": {
      "idl": {
        "children": {
          "counter.json": {
            "content": [
              "{",
              ""version": "0.1.0",",
              ""name": "counter",",
              ""instructions": [",
              "{",
              ""name": "closeCounter",",
              ""accounts": [",
              "{",
              ""name": "payer",",
              ""isMut": true,",
              ""isSigner": true",
              "},",
              "{",
              ""name": "counter",",
              ""isMut": true,",
              ""isSigner": false",
              "}",
              "],",
              ""args": []",
              "},",
              "{",
              ""name": "decrement",",
              ""accounts": [",
              "{",
              ""name": "counter",",
              ""isMut": true,",
              ""isSigner": false",
              "}",
              "],",
              ""args": []",
              "},",
              "{",
              ""name": "increment",",
              ""accounts": [",
              "{",
              ""name": "counter",",
              ""isMut": true,",
              ""isSigner": false",
              "}",
              "],",
              ""args": []",
              "},",
              "{",
              ""name": "initializeCounter",",
              ""accounts": [",
              "{",
              ""name": "payer",",
              ""isMut": true,",
              ""isSigner": true",
              "},",
              "{",
              ""name": "counter",",
              ""isMut": true,",
              ""isSigner": true",
              "},",
              "{",
              ""name": "systemProgram",",
              ""isMut": false,",
              ""isSigner": false",
              "}",
              "],",
              ""args": []",
              "},",
              "{",
              ""name": "set",",
              ""accounts": [",
              "{",
              ""name": "counter",",
              ""isMut": true,",
              ""isSigner": false",
              "}",
              "],",
              ""args": [",
              "{",
              ""name": "value",",
              ""type": "u8"",
              "}",
              "]",
              "}",
              "],",
              ""accounts": [",
              "{",
              ""name": "Counter",",
              ""type": {",
              ""kind": "struct",",
              ""fields": [",
              "{",
              ""name": "count",",
              ""type": "u8"",
              "}",
              "]",
              "}",
              "}",
              "],",
              ""metadata": {",
              ""address": "CounNZdmsQmWh7uVngV9FXW2dZ6zAgbJyYsvBpqbykg"",
              "}",
              "}",
            ],
            "isBinary": false,
            "path": "target/target/idl/counter.json",
          },
        },
        "path": "target/target/idl",
      },
      "types": {
        "children": {
          "counter.ts": {
            "content": [
              "export type Counter = {",
              ""version": "0.1.0",",
              ""name": "counter",",
              ""instructions": [",
              "{",
              ""name": "closeCounter",",
              ""accounts": [",
              "{",
              ""name": "payer",",
              ""isMut": true,",
              ""isSigner": true",
              "},",
              "{",
              ""name": "counter",",
              ""isMut": true,",
              ""isSigner": false",
              "}",
              "],",
              ""args": []",
              "},",
              "{",
              ""name": "decrement",",
              ""accounts": [",
              "{",
              ""name": "counter",",
              ""isMut": true,",
              ""isSigner": false",
              "}",
              "],",
              ""args": []",
              "},",
              "{",
              ""name": "increment",",
              ""accounts": [",
              "{",
              ""name": "counter",",
              ""isMut": true,",
              ""isSigner": false",
              "}",
              "],",
              ""args": []",
              "},",
              "{",
              ""name": "initializeCounter",",
              ""accounts": [",
              "{",
              ""name": "payer",",
              ""isMut": true,",
              ""isSigner": true",
              "},",
              "{",
              ""name": "counter",",
              ""isMut": true,",
              ""isSigner": true",
              "},",
              "{",
              ""name": "systemProgram",",
              ""isMut": false,",
              ""isSigner": false",
              "}",
              "],",
              ""args": []",
              "},",
              "{",
              ""name": "set",",
              ""accounts": [",
              "{",
              ""name": "counter",",
              ""isMut": true,",
              ""isSigner": false",
              "}",
              "],",
              ""args": [",
              "{",
              ""name": "value",",
              ""type": "u8"",
              "}",
              "]",
              "}",
              "],",
              ""accounts": [",
              "{",
              ""name": "counter",",
              ""type": {",
              ""kind": "struct",",
              ""fields": [",
              "{",
              ""name": "count",",
              ""type": "u8"",
              "}",
              "]",
              "}",
              "}",
              "]",
              "};",
              "export const IDL: Counter = {",
              ""version": "0.1.0",",
              ""name": "counter",",
              ""instructions": [",
              "{",
              ""name": "closeCounter",",
              ""accounts": [",
              "{",
              ""name": "payer",",
              ""isMut": true,",
              ""isSigner": true",
              "},",
              "{",
              ""name": "counter",",
              ""isMut": true,",
              ""isSigner": false",
              "}",
              "],",
              ""args": []",
              "},",
              "{",
              ""name": "decrement",",
              ""accounts": [",
              "{",
              ""name": "counter",",
              ""isMut": true,",
              ""isSigner": false",
              "}",
              "],",
              ""args": []",
              "},",
              "{",
              ""name": "increment",",
              ""accounts": [",
              "{",
              ""name": "counter",",
              ""isMut": true,",
              ""isSigner": false",
              "}",
              "],",
              ""args": []",
              "},",
              "{",
              ""name": "initializeCounter",",
              ""accounts": [",
              "{",
              ""name": "payer",",
              ""isMut": true,",
              ""isSigner": true",
              "},",
              "{",
              ""name": "counter",",
              ""isMut": true,",
              ""isSigner": true",
              "},",
              "{",
              ""name": "systemProgram",",
              ""isMut": false,",
              ""isSigner": false",
              "}",
              "],",
              ""args": []",
              "},",
              "{",
              ""name": "set",",
              ""accounts": [",
              "{",
              ""name": "counter",",
              ""isMut": true,",
              ""isSigner": false",
              "}",
              "],",
              ""args": [",
              "{",
              ""name": "value",",
              ""type": "u8"",
              "}",
              "]",
              "}",
              "],",
              ""accounts": [",
              "{",
              ""name": "counter",",
              ""type": {",
              ""kind": "struct",",
              ""fields": [",
              "{",
              ""name": "count",",
              ""type": "u8"",
              "}",
              "]",
              "}",
              "}",
              "]",
              "};",
            ],
            "isBinary": false,
            "path": "target/target/types/counter.ts",
          },
        },
        "path": "target/target/types",
      },
    },
    "path": "target/target",
  },
  "tests": {
    "children": {
      "counter.spec.ts": {
        "content": [
          "import * as anchor from '@coral-xyz/anchor'",
          "import { Program } from '@coral-xyz/anchor'",
          "import { Keypair } from '@solana/web3.js'",
          "import { Counter } from '../target/types/counter'",
          "describe("counter", () => {",
          "// Configure the client to use the local cluster.",
          "const provider = anchor.AnchorProvider.env()",
          "anchor.setProvider(provider)",
          "const payer = provider.wallet as anchor.Wallet",
          "const program = anchor.workspace.Counter as Program<Counter>;",
          "const counterKeypair = Keypair.generate()",
          "it('Initialize Counter', async () => {",
          "await program.methods",
          ".initializeCounter()",
          ".accounts({",
          "counter: counterKeypair.publicKey,",
          "payer: payer.publicKey,",
          "})",
          ".signers([counterKeypair])",
          ".rpc()",
          "const currentCount = await program.account.counter.fetch(counterKeypair.publicKey)",
          "expect(currentCount.count).toEqual(0)",
          "})",
          "it('Increment Counter', async () => {",
          "await program.methods.increment().accounts({ counter: counterKeypair.publicKey }).rpc()",
          "const currentCount = await program.account.counter.fetch(counterKeypair.publicKey)",
          "expect(currentCount.count).toEqual(1)",
          "})",
          "it('Increment Counter Again', async () => {",
          "await program.methods.increment().accounts({ counter: counterKeypair.publicKey }).rpc()",
          "const currentCount = await program.account.counter.fetch(counterKeypair.publicKey)",
          "expect(currentCount.count).toEqual(2)",
          "})",
          "it('Decrement Counter', async () => {",
          "await program.methods.decrement().accounts({ counter: counterKeypair.publicKey }).rpc()",
          "const currentCount = await program.account.counter.fetch(counterKeypair.publicKey)",
          "expect(currentCount.count).toEqual(1)",
          "})",
          "it('Set counter value', async () => {",
          "await program.methods.set(42).accounts({ counter: counterKeypair.publicKey }).rpc()",
          "const currentCount = await program.account.counter.fetch(counterKeypair.publicKey)",
          "expect(currentCount.count).toEqual(42)",
          "})",
          "it('Set close the counter account', async () => {",
          "await program.methods",
          ".closeCounter()",
          ".accounts({",
          "payer: payer.publicKey,",
          "counter: counterKeypair.publicKey,",
          "})",
          ".rpc()",
          "// The account should no longer exist, returning null.",
          "const userAccount = await program.account.counter.fetchNullable(counterKeypair.publicKey)",
          "expect(userAccount).toBeNull()",
          "})",
          "})",
        ],
        "isBinary": false,
        "path": "target/tests/counter.spec.ts",
      },
    },
    "path": "target/tests",
  },
}
`;

exports[`anchor-template generator should generate files for hello-world template 1`] = `
{
  "Anchor.toml": {
    "content": [
      "[features]",
      "seeds = false",
      "skip-lint = false",
      "[programs.localnet]",
      "hello_world = "EuJfgknXicf6iZASeagt5U6XDDPpLTQrvWPW31vgAwo8"",
      "[registry]",
      "url = "https://api.apr.dev"",
      "[provider]",
      "cluster = "Localnet"",
      "wallet = "~/.config/solana/id.json"",
      "[scripts]",
      "test = "../node_modules/.bin/nx run test:jest"",
      "[test.validator]",
      "bind_address = "127.0.0.1"",
    ],
    "isBinary": false,
    "path": "target/Anchor.toml",
  },
  "programs": {
    "children": {
      "hello-world": {
        "children": {
          "Cargo.toml": {
            "content": [
              "[package]",
              "name = "hello-world"",
              "version = "0.1.0"",
              "description = "Created with Anchor"",
              "edition = "2021"",
              "[lib]",
              "crate-type = ["cdylib", "lib"]",
              "name = "hello_world"",
              "[features]",
              "no-entrypoint = []",
              "no-idl = []",
              "no-log-ix-name = []",
              "cpi = ["no-entrypoint"]",
              "default = []",
              "[dependencies]",
              "anchor-lang = "0.28.0"",
            ],
            "isBinary": false,
            "path": "target/programs/hello-world/Cargo.toml",
          },
          "Xargo.toml": {
            "content": [
              "[target.bpfel-unknown-unknown.dependencies.std]",
              "features = []",
            ],
            "isBinary": false,
            "path": "target/programs/hello-world/Xargo.toml",
          },
          "src": {
            "children": {
              "lib.rs": {
                "content": [
                  "use anchor_lang::prelude::*;",
                  "declare_id!("EuJfgknXicf6iZASeagt5U6XDDPpLTQrvWPW31vgAwo8");",
                  "#[program]",
                  "pub mod hello_world {",
                  "use super::*;",
                  "pub fn initialize(_ctx: Context<Initialize>) -> Result<()> {",
                  "msg!("Hello World!");",
                  "Ok(())",
                  "}",
                  "}",
                  "#[derive(Accounts)]",
                  "pub struct Initialize {}",
                ],
                "isBinary": false,
                "path": "target/programs/hello-world/src/lib.rs",
              },
            },
            "path": "target/programs/hello-world/src",
          },
        },
        "path": "target/programs/hello-world",
      },
    },
    "path": "target/programs",
  },
  "src": {
    "children": {
      "hello-world-exports.ts": {
        "content": [
          "import { Program } from '@coral-xyz/anchor';",
          "import { IDL as HelloWorldIDL } from '../target/types/hello_world';",
          "import type { HelloWorld } from '../target/types/hello_world';",
          "export { HelloWorld, HelloWorldIDL };",
          "export type HelloWorldProgram = Program<HelloWorld>;",
        ],
        "isBinary": false,
        "path": "target/src/hello-world-exports.ts",
      },
      "index.ts": {
        "content": [
          "export * from './hello-world-exports'",
        ],
        "isBinary": false,
        "path": "target/src/index.ts",
      },
    },
    "path": "target/src",
  },
  "target": {
    "children": {
      "types": {
        "children": {
          "hello-world.ts": {
            "content": [
              "export type HelloWorld = {",
              ""version": "0.1.0",",
              ""name": "hello_world",",
              ""instructions": [",
              "{",
              ""name": "initialize",",
              ""accounts": [],",
              ""args": []",
              "}",
              "]",
              "};",
              "export const IDL: HelloWorld = {",
              ""version": "0.1.0",",
              ""name": "hello_world",",
              ""instructions": [",
              "{",
              ""name": "initialize",",
              ""accounts": [],",
              ""args": []",
              "}",
              "]",
              "};",
            ],
            "isBinary": false,
            "path": "target/target/types/hello-world.ts",
          },
        },
        "path": "target/target/types",
      },
    },
    "path": "target/target",
  },
  "tests": {
    "children": {
      "hello-world.spec.ts": {
        "content": [
          "import * as anchor from "@coral-xyz/anchor";",
          "import { Program } from "@coral-xyz/anchor";",
          "import { HelloWorld } from "../target/types/hello_world";",
          "describe("hello-world", () => {",
          "// Configure the client to use the local cluster.",
          "anchor.setProvider(anchor.AnchorProvider.env());",
          "const program = anchor.workspace.HelloWorld as Program<HelloWorld>;",
          "it("Is initialized!", async () => {",
          "// Add your test here.",
          "const tx = await program.methods.initialize().rpc();",
          "console.log("Your transaction signature", tx);",
          "});",
          "});",
        ],
        "isBinary": false,
        "path": "target/tests/hello-world.spec.ts",
      },
    },
    "path": "target/tests",
  },
}
`;
